# llvm-project

./: .gitignore
mlir/examples/toy/: CMakeLists.txt
mlir/examples/toy/Ch2/: CMakeLists.txt
mlir/examples/toy/Ch2/include/toy/: CMakeLists.txt  Ops.td
mlir/examples/toy/Ch2/mlir/: Dialect.cpp
mlir/examples/toy/Ch3/: toyc.cpp
mlir/examples/toy/Ch3/include/toy/: Ops.td
mlir/examples/toy/Ch3/mlir/: ToyCombine.cpp  ToyCombine.td
mlir/examples/toy/Ch4/include/toy/: Ops.td  ShapeInferenceInterface.td
mlir/examples/toy/Ch4/mlir/: Dialect.cpp  ShapeInferencePass.cpp
mlir/examples/toy/Ch5/: toyc.cpp
mlir/examples/toy/Ch5/mlir/: LowerToAffineLoops.cpp
mlir/examples/toy/Ch6/: toyc.cpp
mlir/examples/toy/Ch6/mlir/: LowerToLLVM.cpp
mlir/test/Examples/Toy/Ch2/: codegen.toy
mlir/test/Examples/Toy/Ch3/: transpose_transpose.toy  trivial_reshape.toy
mlir/test/Examples/Toy/Ch4/: shape_inference.mlir
mlir/test/Examples/Toy/Ch5/: affine-lowering.mlir
mlir/test/Examples/Toy/Ch6/: codegen.toy
mlir/tools/mlir-shlib/: CMakeLists.txt
